--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 #feedback-container {
     height: 360px;
-    width: 400px;
+    width: 380px;
     background-color: hsl(213, 19%, 18%);
     border-radius: 20px;
     margin: 150px 400px 20px 550px;
@@ -18,7 +18,7 @@ body {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    background-color: hsl(217, 12%, 63%);
+    background-color: hsl(216, 12%, 8%);
     margin: 20px 0 0 25px;
 }
 #star img {
@@ -42,17 +42,23 @@ p {
     width: 45px;          
     height: 45px;        
     border-radius: 50%;   
-    background-color: hsl(217, 12%, 63%); 
+    border: none;
+    background-color: hsl(216, 12%, 8%); 
     color: white;         
     text-align: center;   
     line-height: 50px;  
     font-size: 15px;   
     margin-top: 20px; 
-    margin-left: 25px;
+    margin-left: 23px;
 }
 .rating:hover {
     background-color: hsl(25, 97%, 53%);
     color: black;
+    cursor: pointer;
+}
+.selected {
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 0%)
 }
 footer {
     display: flex;
@@ -60,16 +66,19 @@ footer {
     background-color: hsl(25, 97%, 53%);
     height: 45px;
     width: 350px;
-    margin: 30px 0 0 25px;
+    margin: 30px 0 0 15px;
     border-radius: 20px;
     text-align: center;
 }
 footer:hover {
     background-color: hsl(0, 0%, 100%);
 }
-footer a {
-    text-decoration: none;
-    margin-top: 13px;
+footer button {
+    height: 45px;
+    width: 350px;
+    border: none;
+    background-color: transparent;
+    margin-top: 4px;
 }
 
 
