--- a/styles2.css
+++ b/styles2.css
@@ -1,15 +1,17 @@
+@font-face {
+    font-family: 'Overpass';
+    src: url("https://fonts.google.com/specimen/Overpass");
+}
 body {
     background-color: hsl(216, 12%, 8%);
 }
 #thankyou-container {
-    height: 380px;
+    height: 360px;
     width: 380px;
-    /* background-color: hsl(213, 19%, 18%); */
     background-color: hsl(213, 19%, 18%);
     border-radius: 20px;
     margin: 150px 400px 20px 550px;
     border: 2px solid;
-    position: relative;
 }
 #thankyou-image, #main2 {
     display: flex;
@@ -26,14 +28,27 @@ img {
     display: flex;
     justify-content: center; 
 }
-#main2 p:nth-child(1) {
-    height: 20px;
+#main2 div {
+    height: 25px;
     width: 155px;
     border-radius: 20px;
-    /* background-color: hsl(213, 19%, 18%); */
-    background-color: hsla(213, 19%, 18%), 0.5);
-    margin-top: -5px;
+    background-color: hsl(216, 12%, 8%);
+    margin-top: -10px;
+    padding-top: 5px;
     color: hsl(25, 97%, 53%);
     text-align: center;
-    position: absolute;
+}
+#main2 h1 {
+    color: hsl(0, 0, 100%);
+    margin-top: 10px;
+}
+#main2 p {
+    color: hsl(217, 12%, 63%);
+    font-family: 'Overpass';
+    font-size: 15px;
+    margin-top: -5px;
+    margin-left: 12px;
+    text-align: center;
+    line-height:20px;
+    letter-spacing: 1px;  
 }
