--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,10 @@ body {
     border-radius: 20px;
     margin: 150px 400px 20px 550px;
     border: 2px solid;
-
 }
+
+/* rating section styling  */
+
 #star {
     height: 40px;
     width: 40px;
@@ -24,14 +26,14 @@ body {
 #star img {
     margin: 10px 5px 5px 12px;
 }
-h2 {
+#div-1 h1 {
     font-family: 'Overpass', sans-serif;
     font-size: 25px;
     color: hsl(0, 0%, 100%);
     margin-top: 30px;
     margin-left: 20px;
 }
-p {
+#div-1 p {
     font-family: 'Overpass';
     font-size: 18px;
     color: hsl(217, 12%, 63%);
@@ -60,25 +62,63 @@ p {
     background-color: hsl(0, 0%, 100%);
     color: hsl(0, 0%, 0%)
 }
-footer {
-    display: flex;
-    justify-content: center;
+#submit-btn {
     background-color: hsl(25, 97%, 53%);
+    border: none;
     height: 45px;
     width: 350px;
     margin: 30px 0 0 15px;
     border-radius: 20px;
-    text-align: center;
+    color: black;
 }
-footer:hover {
+#submit-btn:hover {
     background-color: hsl(0, 0%, 100%);
 }
-footer button {
-    height: 45px;
-    width: 350px;
-    border: none;
-    background-color: transparent;
-    margin-top: 4px;
+
+/* thank-you-section styling */
+
+#thank-you-section {
+    display: none;
 }
-
-
+#thankyou-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+}
+#thankyou-image img {
+    height: 100px;
+    width: 150px;
+}
+#div-3 {
+    display: flex;
+    justify-content: center; 
+}
+#div-3 p {
+    height: 25px;
+    width: 180px;
+    border-radius: 20px;
+    background-color: hsl(216, 12%, 8%);
+    margin-top: 30px;
+    padding-top: 5px;
+    color: hsl(25, 97%, 53%);
+    text-align: center;
+}
+#div-4 h2 {
+    color: white;
+    font-family: 'Overpass';
+    font-size: 30px;
+    margin-top: 10px;
+    text-align: center;
+}
+#div-4 p {
+    color: hsl(217, 12%, 63%);
+    font-family: 'Overpass';
+    font-size: 16px;
+    margin-top: -8px;
+    margin-left: 12px;
+    text-align: center;
+    line-height:20px;
+    letter-spacing: 0.8px;  
+}
